<resources>
    <string name="available">Available</string>
    <string name="edit">Edit</string>
    <string name="treatment">Treatment</string>
    <string name="adddoctor">AddDoctor</string>
    <string name="book">Book</string>
    <string name="title">Title</string>
    <string name="disease">Disease</string>
    <string name="description">Description</string>
    <string name="treatment_method">Treatment method</string>
    <string name="add">Add</string>
    <string name="messages">Messages</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="my_calendar">My Calendar</string>
    <string name="profile">Profile</string>
    <string name="appointment">Appointments</string>
    <string name="calendar">Calendar</string>
    <string name="patient_requests">Patient Requests</string>
    <string name="my_patients">My Patients</string>
    <string name="see_sheet">See sheet</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_info">update info</string>
    <string name="blood_type">Blood Type</string>
    <string name="kg">kg</string>
    <string name="weight">Weight</string>
    <string name="physical_information">Physical Information</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="my_doctors">My Doctors</string>
    <string name="medical_folder">Medical Folder</string>
    <string name="search">Search</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="user_name">User Name</string>
    <string name="welcome">Welcome,</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create Account</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="doctor_lina">Doctor lina</string>
    <string name="patient">Patient</string>
    <string name="about">About</string>
    <string name="_972_0_5_37_64_95_15">+972 (0) 5 37 64 95 15</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="phone_number">phone number</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="hospitalisation">Hospitalisation</string>
    <string name="specialization">Specialization</string>
    <string name="doctor">Doctor</string>
    <string name="decline">Decline</string>
    <string name="thank_you">Thank you !</string>
    <string name="appointement_information">Appointement information</string>
    <string name="david">David</string>
    <string name="consultation">Consultation</string>
    <string name="confirm">CONFIRM</string>
    <string name="select_your_appointement">Select your appointement</string>
    <string name="appointement_type">Appointement type</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="patient_name">Patient name</string>
    <string name="choosen">Choosen</string>
    <string name="checked">Checked</string>
    <string name="block">Block</string>
    <string name="are_you_sure">Are you sure you want to block?</string>
    <string name="full">Full</string>
    <string name="un_block">Un Block</string>
    <string name="are_you_sure_you_want_to_unblock">Are you sure you want to unblock?</string>
    <string name="specialist">\"Specialist : \"</string>
    <string name="want_to_be_your_patent">Want to be your patient</string>
    <string name="Dentist">Dentist</string>
    <string name="Ophthalmologist">Ophthalmologist</string>
    <string name="Pediatrician">Pediatrician</string>
    <string name="cheaked">Checked</string>
    <string name="status">Status:</string>
    <string name="specilite"></string>
    <string name="requested">Requested</string>
    <string name="added">Added</string>
    <string name="purpose">Purpose</string>
    <string name="time_and_date">Time and Date</string>
    <string name="finish">finish</string>
    <string name="back_to_login">Back to login</string>
    <string name="doctor_list">Doctors list</string>
    <string name="radiologis">Radiologis</string>
    <string name="rheumatologist">Rheumatologist</string>
    <string name="add_doctor">AddDoctor</string>
    <string name="all">all</string>
    <string name="general">general</string>
    <string name="dentist">Dentist</string>
    <string name="ophthalmologist">Ophthalmologist</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="radiologist">Radiologist</string>
    <string name="appointments">Appointments</string>
</resources>