<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activitysheet">

    <EditText
        android:id="@+id/disease_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="#22BE87"
        android:textColorHint="#22BE87"
        android:hint="@string/disease" />

    <EditText
        android:id="@+id/fiche_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textColor="#22BE87"
        android:textColorHint="#22BE87"
        android:hint="@string/description"
        />

    <EditText
        android:id="@+id/fiche_traitement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textColor="#22BE87"
        android:textColorHint="#22BE87"
        android:hint="@string/treatment"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#22BE87"
        android:text="@string/treatment_method"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/fiche_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:spinnerMode="dropdown"
        android:textColor="#000000">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:text="@string/add" />
    </LinearLayout>


</LinearLayout>