<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FicheInfo">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/_5sdp"
        app:boxBackgroundColor="@color/colorPrimary"
        app:endIconCheckable="true"
        android:hint="@string/disease"
        >



    <EditText
        android:drawableEnd="@drawable/ic_lock"
        android:id="@+id/disease_sheet_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="#22BE87"
        android:textColorHint="#22BE87"
        android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/texField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/_5sdp"
        app:boxBackgroundColor="@color/colorPrimary"
        android:hint="@string/description">



    <EditText
        android:drawableEnd="@drawable/ic_lock"
        android:textAlignment="center"
        android:id="@+id/fiche_description_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textColor="#22BE87"
        android:textColorHint="#22BE87"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/texteld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/_5sdp"
        app:boxBackgroundColor="@color/colorPrimary"
        android:hint="@string/treatment">



    <EditText
        android:textAlignment="center"

        android:drawableEnd="@drawable/ic_lock"
        android:id="@+id/fiche_traitement_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textColor="#22BE87"
        android:textColorHint="#22BE87"
        />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView

        style="@android:style/Widget.Material.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#22BE87"
        android:text="@string/treatment_method"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>

    <Spinner

        android:textAlignment="center"
        android:id="@+id/fiche_type_spinner_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:spinnerMode="dropdown"
        android:textColor="#000000">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="center|bottom">

        <Button

            android:id="@+id/button_add_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/edit" />
    </LinearLayout>


</LinearLayout>