<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#046057"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="133dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@color/cardview_light_background"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:textColorHint="#9E9E9E"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="#9E9E9E"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:paddingLeft="20dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_marginBottom="180dp"
        android:background="#5E35B1"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_marginBottom="180dp"
        android:background="#5E35B1"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CreateAccount"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_marginBottom="96dp"
        android:background="@color/cardview_light_background"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
