<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01574F"
    tools:context=".signinactivity">


    <EditText
        android:id="@+id/firstSignFullName"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/rounded_edittext"
        android:textColorHint="#9E9E9E"
        android:textColor="#000000"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/firstSignBirthDay"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"

        android:paddingLeft="20dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstSignFullName" />

    <EditText
        android:id="@+id/firstSignTel"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="11"
        android:hint="@string/phone_number"
        android:gravity="center"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstSignBirthDay"
        app:layout_constraintVertical_bias="0.014" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:spinnerMode="dropdown"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstSignTel"
        app:layout_constraintVertical_bias="0.163" />

    <Spinner
        android:id="@+id/specialite_spinner"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:spinnerMode="dropdown"
        android:textColor="#000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/choose_your_role"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstSignTel" />

    <Button
        android:id="@+id/confirmeBtn"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:background="#22BE87"
        android:text="@string/confirm"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialite_spinner"
        app:layout_constraintVertical_bias="0.349" />
</androidx.constraintlayout.widget.ConstraintLayout>