<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    android:elevation="@dimen/_9sdp"
    app:cardCornerRadius="@dimen/_9sdp"
    app:cardElevation="@dimen/_9sdp"
    android:layout_margin="@dimen/_8sdp"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        >

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:background="@color/purple_700"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appointement_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/consultation"
                android:textColor="#009688" />

            <TextView
                android:id="@+id/appointement_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="23/06/20 at 9pm"
                android:textColor="#009688" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@+id/btn_decline"
            android:background="@drawable/button_success"
            android:text="@string/accept"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_decline"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/patient_image"
            android:layout_marginBottom="1dp"
            android:background="@drawable/button_danger"
            android:text="@string/decline"
            android:textColor="#f64747"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="82dp"
            android:layout_toEndOf="@+id/patient_image"
            android:text="@string/patient_name"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/patient_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="56dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/patient_image"
            android:text="0652167895"
            android:textColor="#B9B9B9"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/patient_image"
            android:layout_width="86dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="14dp"
            app:srcCompat="@drawable/ic_anon_user_48dp" />


    </RelativeLayout>
    </androidx.cardview.widget.CardView>

