<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_group_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_gchannel"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:textSize="@dimen/_22ssp"

                android:text="@string/messages"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_mentor_chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
        app:layout_constraintTop_toBottomOf="@+id/layout_group_chat" />

    <TextView
        android:id="@+id/text_gchat_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />

    <RelativeLayout
        android:id="@+id/layout_gchat_chatbox"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/ctivity_mentor_chat_message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/activity_mentor_chat_send_button"
            android:background="@android:color/transparent"
            android:hint="@string/enter_message"
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/activity_mentor_chat_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/send"

            android:textColor="@color/colorPrimary" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
